# ZyncPose

./: CMakeLists.txt  LICENSE  README.md  arch_b3136.json  calib_script.py  capture_calib_images.py  compile.sh  edge_pipeline.cpp  graph_surgery.py  quantize.sh  tcp_receiver.py
